--- a/index.html
+++ b/index.html
@@ -4,51 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/style.css">
-    <title>FlashCard</title>
+    <title>Flashcard</title>
 </head>
 <body>
     <main>
-        <section id="container"> 
-
-</section>
-<article class="cartao">
+        <section id="container">
+            <article class="cartao">
                 <div class="cartao__conteudo">
-<h3> Programação </h3>
-                </div>
-                <div class="cartao__conteudo__pergunta">
-<p>O que é Java Script?</p>
-</div>
+                    <h3>Programação</h3>
+                    <div class="cartao__conteudo__pergunta">
+                        <p>O que é JavaScript?</p>
+                    </div>
                     <div class="cartao__conteudo__resposta">
-<p>O Java Script é uma linguagem de programação.</p>
-</div>
+                        <p>O JavaScript é uma linguagem de programação</p>
+                    </div>
+                </div>
             </article>
-
-<article class="cartao">
-        <div class="cartao__conteudo">
-                <h3> Programação </h3>
-                      <div class="cartao__conteudo__pergunta">
-                            <p>O que é CSS?</p>
-                        </div>                        
-                       <div class="cartao__conteudo__resposta">
-                            <p>O CSS é uma linguagem de estilização.</p>
-                         </div>
-                        </div>
-                            
-         </article> 
-         <article class="cartao">
-    <div class="cartao__conteudo">
-        <h3> Programação </h3>
-        <div class="cartao__conteudo__pergunta">
-            <p>O que é CSS?</p>
-        </div>                        
-        <div class="cartao__conteudo__resposta">
-            <p>O CSS é uma linguagem de estilização.</p>
-        </div>
-    </div>
-</article>
+            <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>Programação</h3>
+                    <div class="cartao__conteudo__pergunta">
+                        <p>O que é CSS?</p>
+                    </div>
+                    <div class="cartao__conteudo__resposta">
+                    <p>O CSS é uma linguagem de estilização</p>
+                    </div>
+                </div>
+            </article>
+            <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>Programação</h3>
+                    <div class="cartao__conteudo__pergunta">
+                        <p>O que é CSS?</p>
+                    </div>
+                    <div class="cartao__conteudo__resposta">
+                    <p>O CSS é uma linguagem de estilização</p>
+                    </div>
+                </div>
+            </article>
+        </section>
     </main>
-     <footer>
-            <p>Projeto Desenvolvido pela Alura, sem fins lucrativos</p>
-        </footer>
+    <footer>
+        <p>Projeto desenvolvido pela Alura, sem fins lucrativos</p>
+    </footer>
 </body>
 </html>
